Fix sticky footer on IE8

--- a/app/assets/stylesheets/base/_base.css.scss
+++ b/app/assets/stylesheets/base/_base.css.scss
@@ -1,5 +1,5 @@
 html {
-  height: auto;
+  height: auto !important;
   min-height: 100%;
   position: relative;
 }
